--- a/addons/sourcemod/translations/sv/keep_player_name.phrases.txt
+++ b/addons/sourcemod/translations/sv/keep_player_name.phrases.txt
@@ -11,15 +11,9 @@
 		"en"		"Tvingade namn {2} för {1}"
 	}
 	
-	"keep_player_name_forcename_usage_remove"
+	"keep_player_name_forcename_reset"
 	{
-		"en"		"Användning: sm_removeforcename <#userid|mål namn>"
-	}
-	
-	"keep_player_name_forcename_set_remove"
-	{
-		"#format"	"{1:s}"
-		"en"		"Du har återställt namnet för {1}"
+		"en"		"Du har återställt namnet för dig själv"
 	}
 	
 	"keep_player_name_clearname_usage"
@@ -31,5 +25,10 @@
 	{
 		"#format"	"{1:s}"
 		"en"		"Rensade det sparade spelar namnet för {1}"
+	}
+	
+	"keep_player_name_clearname_reset"
+	{
+		"en"		"Rensade det sparade spelar namnet för dig själv"
 	}
 }
