--- a/addons/sourcemod/translations/hu/keep_player_name.phrases.txt
+++ b/addons/sourcemod/translations/hu/keep_player_name.phrases.txt
@@ -2,39 +2,39 @@
 {
 	"keep_player_name_forcename_usage"
 	{
-		"sv"		"AnvÃ¤ndning: sm_forcename <#userid|mÃ¥l namn> <nytt namn>"
+		"hu"		"Használat: sm_forcename <#userid|cél név> <új név>"
 	}
 	
 	"keep_player_name_forcename_set"
 	{
 		"#format"	"{1:s},{2:s}"
-		"sv"		"Tvingade namn {2} fÃ¶r {1}"
+		"hu"		"Kényszerített neve {1} ról {2} lett"
 	}
 	
 	"keep_player_name_forcename_reset"
 	{
-		"sv"		"Du har Ã¥terstÃ¤llt namnet fÃ¶r dig sjÃ¤lv"
+		"hu"		"Visszaállítottad a saját nevedet"
 	}
 	
 	"keep_player_name_forcename_reset_target"
 	{
 		"#format"	"{1:s}"
-		"sv"		"Du har Ã¥terstÃ¤llt namnet fÃ¶r {1}"
+		"hu"		"Visszaállítottad a nevét neki {1}"
 	}
 	
 	"keep_player_name_clearname_usage"
 	{
-		"sv"		"AnvÃ¤ndning: sm_clearname <#userid|mÃ¥l namn>"
+		"hu"		"Használat: sm_clearname <#userid|cél név>"
 	}
 	
 	"keep_player_name_clearname_reset"
 	{
-		"sv"		"Rensade det sparade spelar namnet fÃ¶r dig sjÃ¤lv"
+		"hu"		"A tartsd játékos neved tárolóját visszaállítottad saját magadnak"
 	}
 	
 	"keep_player_name_clearname_reset_target"
 	{
 		"#format"	"{1:s}"
-		"sv"		"Rensade det sparade spelar namnet fÃ¶r {1}"
+		"hu"		"A tartsd játékos neved tárolóját visszaállítottad neki {1}"
 	}
 }
