--- a/addons/sourcemod/translations/hu/keep_player_name.phrases.txt
+++ b/addons/sourcemod/translations/hu/keep_player_name.phrases.txt
@@ -1,40 +1,51 @@
 "Phrases"
 {
-	"keep_player_name_forcename_usage"
+	"forcename_usage"
 	{
 		"hu"		"Használat: sm_forcename <#userid|cél név> <új név>"
 	}
 	
-	"keep_player_name_forcename_set"
+	"forcename_set"
 	{
 		"#format"	"{1:s},{2:s}"
 		"hu"		"Kényszerített neve {1} ról {2} lett"
 	}
 	
-	"keep_player_name_forcename_reset"
+	"forcename_reset"
 	{
 		"hu"		"Visszaállítottad a saját nevedet"
 	}
 	
-	"keep_player_name_forcename_reset_target"
+	"forcename_reset_target"
 	{
 		"#format"	"{1:s}"
 		"hu"		"Visszaállítottad a nevét neki {1}"
 	}
 	
-	"keep_player_name_clearname_usage"
+	"clearname_usage"
 	{
 		"hu"		"Használat: sm_clearname <#userid|cél név>"
 	}
 	
-	"keep_player_name_clearname_reset"
+	"clearname_reset"
 	{
 		"hu"		"A tartsd játékos neved tárolóját visszaállítottad saját magadnak"
 	}
 	
-	"keep_player_name_clearname_reset_target"
+	"clearname_reset_error"
+	{
+		"hu"		"You must not have a forced name"
+	}
+	
+	"clearname_reset_target"
 	{
 		"#format"	"{1:s}"
 		"hu"		"A tartsd játékos neved tárolóját visszaállítottad neki {1}"
+	}
+	
+	"clearname_reset_error_target"
+	{
+		"#format"	"{1:s}"
+		"hu"		"Target {1} must not have a forced name"
 	}
 }
